# Larena-Backend

./: .gitignore  Dockerfile  LICENSE  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  settings.py  urls.py  views.py
backend/backend/: schema.py  urls.py
backend/backend/settings/: base.py  development.py
backend/ecommerce/: admin.py  apps.py  managers.py  models.py  schema.py  utils.py  views.py
backend/ecommerce/migrations/: 0001_initial.py  0002_auto_20201217_2136.py  0002_auto_20201218_0925.py  0002_auto_20201219_1517.py  0003_auto_20201217_2138.py  0003_auto_20201219_1852.py  0003_product_price.py  0004_auto_20201217_2140.py  0004_auto_20201219_1911.py  0004_product_description.py  0005_auto_20201218_1329.py  0005_order_order_timestamp.py  0006_auto_20201220_2038.py  0006_merge_20201218_2105.py  0006_review.py  0007_auto_20201221_1326.py  0007_like.py  0007_photo.py  0008_merge_20201222_1300.py  0009_auto_20201222_1316.py  0009_auto_20201222_1450.py  0010_auto_20201222_1453.py  0011_merge_20201222_1644.py  0012_auto_20201229_0909.py  0012_auto_20201229_1038.py  0013_merge_20201229_1731.py  0013_merge_20210101_2017.py  (+5 more)
backend/product/: models.py
backend/requirements/: dev-requirements.txt  requirements.in  requirements.txt
backend/user/: admin.py  models.py
config/nginx/: local.conf
frontend/: .eslintcache  .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
public/: index.html
src/: index.tsx
(+6 files in other folders)
